--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
 
   <script src="components/loader.js"></script>
-  <script src="lib/onsenui/js/onsenui.min.js"></script>
+  <script src="components/jquery-3.4.1.min.js"></script>
   <script src="components/acao.js"></script>
   
 
@@ -20,7 +20,7 @@
   <div class="row">
    <div class="col-xs-12">
     <div class="form-group">
-      <button class="btn btn-primary btn-block" id="codigobarra" > Codigo barra</button>
+      <button class="btn btn-primary btn-block" id="a" class="form-group" > Codigo barra</button>
     </div>
   </div>
    </div>
