--- a/www/index.html
+++ b/www/index.html
@@ -8,22 +8,22 @@
   <script src="lib/onsenui/js/onsenui.min.js"></script>
 
   <link rel="stylesheet" href="components/loader.css">
-  <link rel="stylesheet" href="lib/onsenui/css/onsenui.css">
-  <link rel="stylesheet" href="lib/onsenui/css/onsen-css-components.css">
+   <link rel="stylesheet" href="css/bootstrap.min.css.css">
   <link rel="stylesheet" href="css/style.css">
-
-  <script>
-    ons.ready(function() {
-      console.log("Onsen UI is ready!");
-    });
-
-    if (ons.platform.isIPhoneX()) {
-      document.documentElement.setAttribute('onsflag-iphonex-portrait', '');
-      document.documentElement.setAttribute('onsflag-iphonex-landscape', '');
-    }
-  </script>
+  
 </head>
 <body>
-  This is a template for Onsen UI app.
+  <div class="row">
+    <div class"col-xs-12">
+      <div class="form-group">
+
+<button style="margin-top: 78%;border-radius: 100%;width: 40vw;height: 23vh;margin-left:31%;border: none;background-image:url("../fonts/botao.png");" type="button" class="btn btn-primary">
+<img style="border-radius: 100px;" src="fonts/botao.png" alt="">
+</button>
+<img src="fonts/botao.png-circle" alt="" class="img-circle">
+</div>
+</div>
+</div>
+
 </body>
 </html>
