--- a/www/index.html
+++ b/www/index.html
@@ -4,11 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
+
   <script src="components/loader.js"></script>
-  <script src="lib/onsenui/js/onsenui.min.js"></script>
+  <script src="components/jquery-3.4.1.min.js"></script>
+  <script src="components/acao.js"></script>
 
   <link rel="stylesheet" href="components/loader.css">
-   <link rel="stylesheet" href="css/bootstrap.min.css.css">
+  
   <link rel="stylesheet" href="css/style.css">
   
 </head>
@@ -17,7 +19,7 @@
     <div class"col-xs-12">
       <div class="form-group">
 
-<button style="margin-top: 78%;border-radius: 100%;width: 40vw;height: 23vh;margin-left:31%;border: none;background-image:url("../fonts/botao.png");" type="button" class="btn btn-primary">
+<button style="margin-top: 78%;border-radius: 100%;width: 40vw;height: 23vh;margin-left:31%;border: none;background-image:url("../fonts/botao.png");" type="button" id="a" class="btn btn-primary">
 <img style="border-radius: 100px;" src="fonts/botao.png" alt="">
 </button>
 <img src="fonts/botao.png-circle" alt="" class="img-circle">
